Tiredness rework Tiredness > 400 now gives Tired effect. Every 20 more tiredness gives one more level. Slows you down by 8% per level and slows down attack speed by 5% per level. Tired II decreases the view distance down to 8 blocks at Tired V (max level) Removed Debuff Tiredness